# jans-deck

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  JANS.md  LICENSE  ORCHESTRATOR.md  README.md  jans-menu.sh  jans.icns  make_app.py  make_icon.py  pyproject.toml
jans/: __main__.py  app.py  ctl.py  gui.py  menubar.py  models.py
jans/core/: commands.py  features.py  log.py  persistence.py  state_detector.py
jans/web/: server.py
jans/web/static/: index.html
jans/widgets/: session_list.py  terminal_widget.py
