[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jans"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80.0",
    "pyte>=0.8.0",
    "ptyprocess>=0.7.0",
    "watchfiles>=0.21.0",
    "rumps>=0.4.0",
]

[project.scripts]
jans = "jans.__main__:main"
jans-ctl = "jans.ctl:main"
jans-menu = "jans.menubar:main"
jans-gui = "jans.gui:main"
